--- a/MobileDuckLibras/app/src/main/res/layout/traducao.xml
+++ b/MobileDuckLibras/app/src/main/res/layout/traducao.xml
@@ -71,51 +71,48 @@
 
         <ImageView
             android:id="@+id/home_btn"
-            android:layout_width="0dp"
+            android:layout_width="87dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:contentDescription="Home"
             app:srcCompat="@drawable/home" />
 
         <ImageView
             android:id="@+id/flashcard"
-            android:layout_width="0dp"
+            android:layout_width="87dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:contentDescription="Flashcard"
+            android:clickable="true"
+            android:contentDescription="flashcard"
             android:onClick="flashcard_btn"
-            app:srcCompat="@drawable/flashcard"
-            tools:ignore="TouchTargetSizeCheck" />
+            app:srcCompat="@drawable/flashcard" />
 
         <ImageView
             android:id="@+id/anotacao"
-            android:layout_width="0dp"
+            android:layout_width="87dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:contentDescription="Anotação"
+            android:clickable="true"
+            android:contentDescription="anotacao"
             android:onClick="anotacao_btn"
-            app:srcCompat="@drawable/anotacoes"
-            tools:ignore="TouchTargetSizeCheck" />
+            app:srcCompat="@drawable/anotacoes" />
 
         <ImageView
             android:id="@+id/dicionario"
-            android:layout_width="0dp"
+            android:layout_width="87dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:contentDescription="Dicionário"
+            android:clickable="true"
+            android:contentDescription="dicionario"
             android:onClick="dicionario_btn"
-            app:srcCompat="@drawable/dicionario"
-            tools:ignore="TouchTargetSizeCheck" />
+            app:srcCompat="@drawable/dicionario" />
 
         <ImageView
             android:id="@+id/traducao"
-            android:layout_width="0dp"
+            android:layout_width="87dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:contentDescription="Tradução"
+            android:clickable="true"
+            android:contentDescription="traducao"
             android:onClick="traducao_btn"
-            app:srcCompat="@drawable/traducoes"
-            tools:ignore="TouchTargetSizeCheck" />
+            app:srcCompat="@drawable/traducoes" />
     </LinearLayout>
 
     <!-- CONTEÚDO CENTRAL -->
