--- a/MobileDuckLibras/app/src/main/res/layout/aula_1_o.xml
+++ b/MobileDuckLibras/app/src/main/res/layout/aula_1_o.xml
@@ -21,44 +21,49 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView26">
 
         <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
+            android:id="@+id/home_btn"
+            android:layout_width="87dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:src="@drawable/_96_sem_t_tulo" />
+            app:srcCompat="@drawable/home" />
 
         <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="wrap_content"
+            android:id="@+id/flashcard"
+            android:layout_width="87dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
-            android:src="@drawable/_96_sem_t_tulo_20250515165227" />
+            android:contentDescription="flashcard"
+            android:onClick="flashcard_btn"
+            app:srcCompat="@drawable/flashcard" />
 
         <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="wrap_content"
+            android:id="@+id/anotacao"
+            android:layout_width="87dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
-            android:src="@drawable/_96_sem_t_tulo_20250515165235" />
+            android:contentDescription="anotacao"
+            android:onClick="anotacao_btn"
+            app:srcCompat="@drawable/anotacoes" />
 
         <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="wrap_content"
+            android:id="@+id/dicionario"
+            android:layout_width="87dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
-            android:src="@drawable/_96_sem_t_tulo_20250515165246" />
+            android:contentDescription="dicionario"
+            android:onClick="dicionario_btn"
+            app:srcCompat="@drawable/dicionario" />
 
         <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="wrap_content"
+            android:id="@+id/traducao"
+            android:layout_width="87dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:clickable="true"
-            android:src="@drawable/_96_sem_t_tulo_20250515165339" />
+            android:contentDescription="traducao"
+            android:onClick="traducao_btn"
+            app:srcCompat="@drawable/traducoes" />
     </LinearLayout>
 
     <TextView
