--- a/MobileDuckLibras/app/src/main/res/layout/flashcard.xml
+++ b/MobileDuckLibras/app/src/main/res/layout/flashcard.xml
@@ -18,8 +18,8 @@
 
         <ImageView
             android:id="@+id/imageView14"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="354dp"
+            android:layout_height="188dp"
             android:layout_marginStart="68dp"
             android:layout_marginEnd="68dp"
             android:layout_marginBottom="30dp"
@@ -78,49 +78,49 @@
             app:layout_constraintTop_toBottomOf="@+id/checkBoxDinheiro">
 
             <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="wrap_content"
+                android:id="@+id/home_btn"
+                android:layout_width="87dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:clickable="true"
-                android:onClick="anotacao_btn"
-                android:src="@drawable/_96_sem_t_tulo" />
+                app:srcCompat="@drawable/home" />
 
             <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="wrap_content"
+                android:id="@+id/flashcard"
+                android:layout_width="87dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:clickable="true"
+                android:contentDescription="flashcard"
                 android:onClick="flashcard_btn"
-                android:src="@drawable/_96_sem_t_tulo_20250515165227" />
+                app:srcCompat="@drawable/flashcard" />
 
             <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="wrap_content"
+                android:id="@+id/anotacao"
+                android:layout_width="87dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:clickable="true"
-                android:onClick="home_btn"
-                android:src="@drawable/_96_sem_t_tulo_20250515165235" />
+                android:contentDescription="anotacao"
+                android:onClick="anotacao_btn"
+                app:srcCompat="@drawable/anotacoes" />
 
             <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="wrap_content"
+                android:id="@+id/dicionario"
+                android:layout_width="87dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:clickable="true"
+                android:contentDescription="dicionario"
                 android:onClick="dicionario_btn"
-                android:src="@drawable/_96_sem_t_tulo_20250515165246" />
+                app:srcCompat="@drawable/dicionario" />
 
             <ImageView
-                android:id="@+id/imageView8"
-                android:layout_width="wrap_content"
+                android:id="@+id/traducao"
+                android:layout_width="87dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:clickable="true"
+                android:contentDescription="traducao"
                 android:onClick="traducao_btn"
-                android:src="@drawable/_96_sem_t_tulo_20250515165339" />
+                app:srcCompat="@drawable/traducoes" />
         </LinearLayout>
 
         <CheckBox
