--- a/MobileDuckLibras/app/src/main/res/layout/dicionario.xml
+++ b/MobileDuckLibras/app/src/main/res/layout/dicionario.xml
@@ -75,16 +75,18 @@
         android:id="@+id/recyclerViewDicionario"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingTop="8dp"
         android:clipToPadding="false"
+        android:paddingStart="16dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="16dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_dicionario"
-        app:layout_constraintTop_toBottomOf="@id/search_bar_layout"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation_bar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/search_bar_layout"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/item_dicionario" />
 
     <LinearLayout
         android:id="@+id/bottom_navigation_bar"
